LL-parser/LookaheadTable-Grammar


		0...9	+	-	/	*	EOF 	(		)

exp1	#1								#1

exp2			#2	#3			e				e

term1	#5								#5

term2			e	e	#7	#6	e				e

factor	#10								#9

num1	#11

num2	#12		e	e	e	e	e				e

digit	#14
_____________________________________________________________________

exp1 -> term1 exp2
exp2 -> + term1 exp2
     | - term1 exp2
     | e
term1 -> factor term2
term2 -> * factor term2
       | / factor term2
       | e
factor -> (exp1)
      | num1
num1 -> digit num2
num2 -> digit num2
      | e
digit -> 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
